# parallel_matrix_engine

./: CMakeLists.txt  README.md
include/: matrix.hpp  threadpool.hpp
src/: main.cpp  matrix.cpp  threadpool.cpp
tests/: test_matrix.cpp
